# dawa-lens

./: .env.example  .env.production  .firebaserc  .gitignore  AGENTS.md  README.md  capacitor.config.ts  capgo.config.json  eslint.config.js  firebase.json  firestore.indexes.json  firestore.rules  index.html  lint_results.txt  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.artifacts/20260526-205312-18f0a26c-e050-4b02-aced-3d85830b2ec3/: implementation_plan.artifact.md  task.artifact.md  walkthrough.artifact.md
.artifacts/20260528-012508-8313f739-7937-4949-8458-6a5506c739ce/: implementation_plan.artifact.md  (+2 more)
.firebase/: hosting.YWRtaW4vZGlzdA.cache  hosting.ZGlzdA.cache
admin/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
android/: build.gradle  capacitor.settings.gradle  variables.gradle
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  manifest.json
public/: google-callback.html  manifest.json  offline.html  version.json
rust/: Cargo.toml  README.md  build-android.sh  build-ios.sh
rust/src/: crypto.rs  db.rs  file_ops.rs  interaction.rs  lib.rs  network.rs  parsing.rs  scheduler.rs  search.rs
server/: .env  .env.example  check-env.js  debug-ai.js  list-models.js  package-lock.json  package.json  test-ai.js  test-ai2.js  test-cerebras-key.js  test-fix-verification.js  test-gemini.js  test-long-output.js  test-scan-isolated.js  test-security-fixes.js  test-vision.js
src/: App.tsx  index.css  main.tsx
(+312 files in other folders)
