[package]
name = "dawa-search"
version = "0.1.0"
edition = "2021"
description = "Offline drug name fuzzy search engine for Dawa Lens"

[lib]
name = "dawa_search"
crate-type = ["cdylib", "staticlib"]  # cdylib for Android .so, staticlib for iOS .a

[features]
default = []
android = ["jni"]
ios = []

[dependencies]
jni = { version = "0.21", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
sha2 = "0.10"
zip = "0.6"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
